--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;500&family=League+Spartan:wght@100;200;300;400&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="styles/mobilenav.css">
+
+    <script src="js/mobiledropdown.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+    <script src="js/desktopdropdown.js"></script>
     <title>Błażej Tondel - Web developer</title>
 </head>
 
@@ -26,32 +31,32 @@
     <nav class="desktop">
         <ul class="clearfix wrapper">
             <li>
-                <p>Home</p>
+                <p onclick="scrollToElement(document.querySelector('header'))">Home</p>
             </li>
             <li>
-                <p>O mnie</p>
+                <p onclick="scrollToElement(document.querySelector('section.about'))">O mnie</p>
             </li>
             <li>
-                <p>Projekty</p>
+                <p onclick="scrollToElement(document.querySelector('section.projects'))">Projekty</p>
             </li>
             <li>
-                <p>Kontakt</p>
+                <p onclick="scrollToElement(document.querySelector('section.contact'))">Kontakt</p>
             </li>
         </ul>
     </nav>
-    <nav class="mobile">
-        <div class="opacity-bg"></div>
+    <nav id="nav-mobile" class="mobile">
+        <div id="opacity" class="opacity-bg"></div>
         <div class="dropdown-bar">
-            <div class="dropdown-btn">
+            <div id="dropdown-button" class="dropdown-btn" onclick="dropIt()">
                 <h3>Home</h3>
                 <img src="img/Down arrow.svg" alt="Navigation button">
             </div>
         </div>
-        <div class="dropdown-content">
-            <h3>Home</h3>
-            <h3>O mnie</h3>
-            <h3>Projekty</h3>
-            <h3>Kontakt</h3>
+        <div id="dropdown-content" class="dropdown-content">
+            <h3 onclick="scrollToElement(document.querySelector('header'))">Home</h3>
+            <h3 onclick="scrollToElement(document.querySelector('section.about'))">O mnie</h3>
+            <h3 onclick="scrollToElement(document.querySelector('section.projects'))">Projekty</h3>
+            <h3 onclick="scrollToElement(document.querySelector('section.contact'))">Kontakt</h3>
         </div>
     </nav>
     <header>
@@ -68,7 +73,8 @@
                 <img src="img/google-square-mono.svg" alt="Google icon">
             </div>
             <div class="button-con">
-                <img src="img/Down button.svg" alt="Scroll down">
+                <img onclick="scrollToElement(document.querySelector('section.about'))" src="img/Down button.svg"
+                    alt="Scroll down">
             </div>
         </div>
     </header>
@@ -202,5 +208,8 @@
     </footer>
 
 </body>
+<script>
+
+</script>
 
 </html>
