--- a/index.html
+++ b/index.html
@@ -216,6 +216,23 @@
                                 Użytkownicy mogą łączyć się w grupy, aby wspólnie zarządzać budżetem.</p>
                         </div>
                     </div>
+                    <div class="project-con">
+                        <a href="https://www.nataliatondel.com/">
+                            <div class="project">
+                                <div class="image artstore"></div>
+                                <h1>Art store</h1>
+                            </div>
+                        </a>
+                        <div class="project-description">
+                            <p>Aplikacja Art Store została stworzona aby ułatwić artystce zamieszczanie swoich dzieł w
+                                internecie.
+                                Umożliwia jej dodawanie oraz usuwanie obrazów na stronie, a odwiedzającym przejrzyste
+                                poruszanie się po portfolio artystki.
+                                W przyszłości będą oni mogli dokonać zakupu wystawionych obrazów korzystając z
+                                aplikacji.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
